add_library (Leaf SHARED 
	"src/Leaf/Application.cpp" "src/Leaf/Application.h" "src/Leaf/Core.h"  "src/Leaf.h" "src/Leaf/EntryPoint.h")

target_include_directories(Leaf INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src)

set_target_properties(Leaf 
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CURRENT_ARCHITECUTURE}-${CMAKE_BUILD_TYPE}/${PROJECT_NAME}
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CURRENT_ARCHITECUTURE}-${CMAKE_BUILD_TYPE}/${PROJECT_NAME}
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CURRENT_ARCHITECUTURE}-${CMAKE_BUILD_TYPE}/${PROJECT_NAME}
)

target_compile_definitions(Leaf PRIVATE LEAF_PLATFORM_WINDOWS
												LEAF_BUILD_DLL)
